--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,9 @@ nav{
                 }
 
                 .lines{
-                    font-size: 15px;
+                    font-size: 20px;
+                    font-family: Georgia, 'Times New Roman', Times, serif;
+                    font-weight: bold;
                 }
 
 
